fix: update trigger action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ name: CI Workflow
 on:
   push:
     branches:
-      - '**'
-      - '!main' # excludes main
+      - 'main' # excludes main
 
 jobs:
   lint:
